methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to nbPas) {
         ^